command update
