# dal/model/task_template.gen.go
@@ -18,7 +18,7 @@ type TaskTemplate struct {
 	Variable  json.RawMessage `gorm:"column:variable;default:json_object()" json:"variable"`
 	UpdatedAt *time.Time      `gorm:"column:updated_at;default:CURRENT_TIMESTAMP" json:"updated_at"`
 	CreatedAt *time.Time      `gorm:"column:created_at;default:now()" json:"created_at"`
-	Stages    []*TaskStage    `gorm:"many2many:task_template_stage" json:"stages"`
+	Stages    []TaskStage     `gorm:"many2many:task_template_stage" json:"stages"`
 }
 
 // TableName TaskTemplate's table name
